--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         </activity>
         <activity android:name=".Example3Activity">
         </activity>
+        <activity android:name=".Example4Activity">
+        </activity>
+        <activity android:name=".Example5Activity">
+        </activity>
     </application>
 
 </manifest>
